style.css
/* ... */
.section-title {
  font-family: 'Kenia', cursive;
  color: var(--color-off-white);
  position: absolute;
  top: none;
  bottom: 0;
  font-size: clamp(75px, 12vw, 180px);
  margin-block-start: 0;
  margin-block-end: 0;
  line-height: normal;
  opacity: 60%;
  z-index: 100;
}

.about-me_wrapper {
  position: relative;
  display: grid;
  grid-template-columns: 1fr 1fr;
  font-weight: 500;
  font-size: 20px;
  z-index: 200;
  margin-top: 5rem;
}

.about-me_profile {
  padding: 1rem;
  border-radius: 8px;
  background: rgba(0,0,0,.5);
  margin-block: 4rem;
}

.about-me_aside {
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.about-me_aside h3 {
  font-size: 24px;
  border-bottom: 2px solid var(--color-off-white);
  text-align: center;
}

.about-me_aside ul {
  display: flex;
  flex-wrap: wrap;
  gap: 2rem;
  grid-template-columns: auto;
  margin-top: 1.5rem;
}

.about-me_aside a {
  width: fit-content;
  margin-inline:  auto;
  margin-top: 2rem;
  margin-bottom: 4rem;
  padding: 1rem;
  border-radius: 8px;
  font-weight: 900;
  color: var(--color-off-white);
  background: transparent;
  border: 2px solid var(--color-off-white);
  text-decoration: none;
  transition: all 300ms ease;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.about-me_aside a:hover, .about-me_aside a:active {
  transform: scale(1.05);
}

.card-wrapper {
 display: grid;
 grid-template-columns: repeat(8, 1fr);
 grid-template-rows: repeat(8, auto);
 grid-gap: 2rem;
 position: relative;
 z-index: 500;
 width: 100%;
 max-width: 1500px;
 margin: 0 auto;
 height: 90vh;
}

.flip-card {
  position: relative;
  perspective: 1000px;
  height: 100%;
  width: 100%;
  transition: all 300ms ease;
  border-radius: 8px;
}
#flip-card_1 {
  grid-column: 1 / 5;
  grid-row: 1 / 5;
}

#flip-card_2 {
  grid-column: 5 / 9;
  grid-row: 2 / 5;
}

#flip-card_3 {
  grid-row: 5 / 9;
  grid-column: 5 / 9;
}

#flip-card_4 {
  grid-row: 5 / 8;
  grid-column: 1 / 5;
}

.flipped > .projects-card_front {
  transform: rotateY(-180deg);
}

.flipped > .projects-card_back {
  transform: rotateY(0deg);
}

.flip-card:hover, .flip-card:active {
  transform: scale(1.02);
}

.projects-card_front, .projects-card_back {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  backface-visibility: hidden;
  background: black;
  transition: 0.3s;
  cursor: pointer;
  -webkit-box-shadow: 0px 0px 10px 2px rgba(254,251,234,0.5);
  -moz-box-shadow: 0px 0px 10px 2px rgba(254,251,234,0.5);
  box-shadow: 0px 0px 10px 2px rgba(254,251,234,0.5);
}

.projects-card_front {
  height: 100%;
  width: 100%;
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  transition: all 300ms ease;
}

.projects-card_back {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  transform: rotateY(180deg);
  border-radius: 8px;
}

.projects-card_back p{
  padding: 1rem;
}

.icon-wrapper {
  display: flex;
  gap: 2rem;
  margin-top: 2em;
}

.projects-card_text {
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  justify-content: center;
  background: rgba(0,0,0,.6);
  backdrop-filter: blur(10px);
}

.projects-card_back svg {
  fill: var(--color-off-white);
  transition: all 500ms ease;
}

.projects-card_back svg:hover {
  fill: var(--color-off-white_darker);
  transform: translateY(-3px);
}

.projects-card_back svg:active {
  fill: var(--color-off-white_darker);
  transform: translateY(-3px);
}

.projects-card:hover, .projects-card:active {
  transform: scale(1.02);
}

#projects-card_1 {
  background: url(assets/travel-app-screenshot.png);
  background-size: 100% auto;
  background-repeat: no-repeat;
}

#projects-card_2 {
  background: url(assets/little-lemon-screeshot.png);
  background-size: 100% auto;
  background-repeat: no-repeat;
  grid-area: 2;
}

#projects-card_3 {
  background: url(assets/travel-app-screenshot.png);
  background-size: 100% auto;
  background-repeat: no-repeat;
  grid-area: 3;
}

#projects-card_4 {
  background: url(assets/github-clone-screenshot.png);
  background-size: 100% auto;
  background-repeat: no-repeat;
  grid-area: 4;
}

.projects-card_title {
  font-size: 32px;
  width: fit-content;
  font-family: 'Anton', sans-serif;
  padding: 1rem;
}

.projects-card_tools {
  bottom: 2rem;
  font-weight: 700;
  font-size: 18px;
  font-style: italic;
}

#more-icon {
  font-size: 36px;
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;
  padding-inline: 0.5rem;
  border-radius: 8px;
  background: rgba(0,0,0,.5);
  backdrop-filter: blur(10px);
}

#close-icon {
  font-size: 36px;
  position: absolute;
  top: 0.5rem;
  right: 1rem;
}

#contact-form {
  width: 100%;
  max-width: 600px;
  margin-inline: auto;
  padding-top: 5rem;
  position: relative;
  z-index: 500;
}

input, textarea {
  padding: 1rem;
  border-radius: 8px;
  background: var(--color-off-white);
  border: none;
  color: black;
  width: 100%;
}

textarea {
  min-height: 300px;
  margin-bottom: 2rem;
}

label {
  width: 150px;
  font-size: 24px;
}

.input-wrapper {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1.5rem;
  gap: 2rem;
}

.contact-form_button-wrapper {
  width: 100%;
  display: flex;
  justify-content: center;
}

#contact-form button {
  margin-bottom: 2rem;
  border: 1px solid var(--color-off-white);
  background: black;
  color: var(--color-off-white);
  display: flex;
  align-items: center;
  gap: 0.75rem;
  padding: 1rem;
  border-radius: 8px;
  font-weight: 700;
  cursor: pointer;
}

#contact-form button:hover, #contact-form button:active {
  transform: scale(1.05);
}

footer {
  flex-direction: column;
  align-items: center;
  margin-top: 150px;
  margin-bottom: 20px;
  color: var(--color-off-white);
}

footer p {
  font-family: Fira Code, Roboto Mono, monospace;
}
/* ... */

